--- a/Src/Common/Common/Common.vcxproj
+++ b/Src/Common/Common/Common.vcxproj
@@ -40,15 +40,15 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <OutDir>../../Lib/$(ProjectName)/$(Configuration)/</OutDir>
+    <OutDir>../../../Lib/$(ProjectName)/$(Configuration)/</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IntDir>../../Obj/$(ProjectName)/$(Configuration)/</IntDir>
+    <IntDir>../../../Obj/$(ProjectName)/$(Configuration)/</IntDir>
     <LibraryPath>$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <OutDir>../../Lib/$(ProjectName)/$(Configuration)/</OutDir>
-    <IntDir>../../Obj/$(ProjectName)/$(Configuration)/</IntDir>
+    <OutDir>../../../Lib/$(ProjectName)/$(Configuration)/</OutDir>
+    <IntDir>../../../Obj/$(ProjectName)/$(Configuration)/</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
