--- a/Src/Common/Network/Network.vcxproj
+++ b/Src/Common/Network/Network.vcxproj
@@ -40,12 +40,12 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <OutDir>../../Lib/$(ProjectName)/$(Configuration)/</OutDir>
-    <IntDir>../../Obj/$(ProjectName)/$(Configuration)/</IntDir>
+    <OutDir>../../../Lib/$(ProjectName)/$(Configuration)/</OutDir>
+    <IntDir>../../../Obj/$(ProjectName)/$(Configuration)/</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <OutDir>../../Lib/$(ProjectName)/$(Configuration)/</OutDir>
-    <IntDir>../../Obj/$(ProjectName)/$(Configuration)/</IntDir>
+    <OutDir>../../../Lib/$(ProjectName)/$(Configuration)/</OutDir>
+    <IntDir>../../../Obj/$(ProjectName)/$(Configuration)/</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
